# qr-cli

./: .claudeignore  .gitignore  Dockerfile  EXAMPLES.md  Makefile  README.md  generate.js  package.json  pyproject.toml
.claude/skills/qr/: SKILL.md
.claude/skills/qr/assets/colours/: colour.pairs.json
.claude/skills/qr/docs/: README.md
.claude/skills/qr/scripts/: Makefile  bootstrap_node_backend.sh  extract_skill_examples.py  index.js  qr-skill.sh
.githooks/: commit-msg
.github/workflows/: disable.ci.yml.disable  publish.yml.disable
demo/: demo.tape  demo1.tape
qr_cli/: __init__.py  __main__.py  backends.py  generator.py
qr_cli/node/: index.js  package.json
scripts/: extract_examples.py  extract_skill_examples.py  list_files.sh
tests/: test_qr_cli.py
